Fixed:  When we click button close of advanced map, the first element which becomes hidden is overlay ---> it looks better  Copied external files to our static directory.  Created div basic-map-extend-img instead img class basic-map-extend-img and shown img close button with JQuery.  Used the icon close button from Visage and set it in the right top corner of the window instead of on the map in the corner, like it was before.  Made layer background less transparent and fade in and fade out effect.  Added function, which makes the map close when we click outside of the map.  Fixed style of code: ($('#map').detach().prependTo('#basic-map')) to $('#map').detach().prependTo('#basic-map')  Used method hide() instead of method css to set div visibility to false:  $('#basic-map-extend-img').css('visibility', 'hidden'); to >   $('#basic-map-extend-img').hide();  Used method show() instead of method css to set div visibility to true:   $('#basic-map-extend-img').css('visibility', 'visible'); to $('#basic-map-extend-img').show();  When we resize map, the marker stays still in center of the map.
To be continued...;)

--- a/piplmesh/panels/map/static/piplmesh/panel/map/panel.css
+++ b/piplmesh/panels/map/static/piplmesh/panel/map/panel.css
@@ -11,8 +11,8 @@
     top: 100px;
     cursor: pointer;
     height: 100px;
-    width: 49px;
-    z-index: 60000000;
+    width: 39px;
+    z-index: 300020;
 }
 #map {
     height: 100%;
@@ -51,14 +51,21 @@
     padding: 0px;
     border: none;
 }
-.close {
-    background-image: url(http://jquerytools.org/media/img/overlay/close.png);
-    position: absolute;
-    right: -22px;
-    top: -22px;
+#closeButton{
+    position: fixed;
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    outline: none;
+    background: none;
+    float: none;
+    clear: none;
+    z-index: 300040;
+    right: 0px;
+    top: 0px;
+    height: 60px;
+    width: 62px;
     cursor: pointer;
-    height: 35px;
-    width: 35px;
 }
 .centered {
     margin-right: auto;
@@ -86,5 +93,4 @@
     clear: none;
     display: block;
     background-color: black;
-    opacity:0.4;
 }
